--- a/package.json
+++ b/package.json
@@ -15,13 +15,24 @@
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
+    "@angular/fire": "^5.2.1",
     "@angular/forms": "~7.2.0",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "angularfire2": "^5.2.1",
+    "bootstrap": "^4.3.1",
+    "cached-firebase": "^0.1.0",
     "core-js": "^2.5.4",
+    "file-saver": "^2.0.2",
+    "firebase": "^6.2.0",
+    "jquery": "^3.4.1",
+    "ng2-file-upload": "^1.3.0",
+    "ngx-export-as": "^1.2.5",
+    "popper.js": "^1.15.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
+    "xlsx": "^0.14.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
